Push avancée tool MJ
Rework until EVTNAME13

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -36,101 +36,114 @@ l_english:
  glp_save_edit_events.EVTRELIGIONA32:0 "Transmutative Path"
  glp_save_edit_events.EVTRELIGIONA33:0 "Mystic Accord"
  glp_save_edit_events.EVTNAME2:0 "Changed Religion"
- glp_save_edit_events.EVTDESC2:0 "My Lord! By the decree of the Vampiric Conclave, our [Root.GovernmentName] has converted to [Root.Religion.GetName]!"
+ glp_save_edit_events.EVTDESC2:0 "My Lord! By the decree of the Infernal Troll Game Masters, our [Root.GovernmentName] has converted to [Root.Religion.GetName]!"
  glp_save_edit_events.EVTOPTA2:0 "Interesting..."
- glp_religion_changed_tt:0 "§Y[Root.GetName]'s faith has been changed by the Vampiric Conclave intervention!§!"
- glp_save_edit_events.EVTNAME3:0 "Change [From.Owner.GetName]'s government"
- glp_save_edit_events.EVTDESC3:0 "Choose the government type for [From.Owner.GetName]."
- glp_save_edit_events.EVTOPTA3:0 "Nevermind"
- glp_save_edit_events.EVTOPTB3:0 "Monarchy"
- glp_save_edit_events.EVTOPTC3:0 "Republic"
- glp_save_edit_events.EVTOPTD3:0 "Theocracy"
- glp_save_edit_events.EVTOPTE3:0 "Tribal"
- glp_save_edit_events.EVTNAME4:0 "Changed Government"
- glp_save_edit_events.EVTDESC4:0 "My Lord! By the decree of the Vampiric Conclave, our nation just became a [Root.GovernmentName]! May the new ways of governing allow us to build a brighter future for us and our children!"
- glp_save_edit_events.EVTOPTA4:0 "Let us embrace the new tomorrow!"
- glp_government_flipped_tt:0 "§Y[Root.GetName]'s government type has been changed by the Vampiric Conclave intervention!§!"
+ glp_religion_changed_tt:0 "§Y[Root.GetName]'s faith has been changed by the Infernal Troll Game Master's intervention!§!"
+ 
+# glp_save_edit_events.EVTNAME3:0 "Change [From.Owner.GetName]'s government"
+# glp_save_edit_events.EVTDESC3:0 "Choose the government type for [From.Owner.GetName]."
+# glp_save_edit_events.EVTOPTA3:0 "Nevermind"
+# glp_save_edit_events.EVTOPTB3:0 "Monarchy"
+# glp_save_edit_events.EVTOPTC3:0 "Republic"
+# glp_save_edit_events.EVTOPTD3:0 "Theocracy"
+# glp_save_edit_events.EVTOPTE3:0 "Tribal"
+# glp_save_edit_events.EVTNAME4:0 "Changed Government"
+# glp_save_edit_events.EVTDESC4:0 "My Lord! By the decree of the Vampiric Conclave, our nation just became a [Root.GovernmentName]! May the new ways of governing allow us to build a brighter future for us and our children!"
+# glp_save_edit_events.EVTOPTA4:0 "Let us embrace the new tomorrow!"
+# glp_government_flipped_tt:0 "§Y[Root.GetName]'s government type has been changed by the Vampiric Conclave intervention!§!"
+ 
  glp_save_edit_events.EVTNAME5:0 "Spawn Troops for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC5:0 "Decide how many and what type of troops to spawn for [From.Owner.GetName] in the province of [From.GetName]."
- glp_save_edit_events.EVTOPTA5:0 "Nevermind"
- glp_save_edit_events.EVTOPTB5:0 "Spawn to Force Limit"
- glp_save_edit_events.EVTOPTC5:0 "Spawn 10 Infantry"
- glp_save_edit_events.EVTOPTD5:0 "Spawn 20 Infantry"
- glp_save_edit_events.EVTOPTE5:0 "Spawn 30 Infantry"
- glp_save_edit_events.EVTOPTF5:0 "Spawn 40 Infantry"
- glp_save_edit_events.EVTOPTG5:0 "Spawn 10 Cavalry"
- glp_save_edit_events.EVTOPTH5:0 "Spawn 20 Cavalry"
- glp_save_edit_events.EVTOPTI5:0 "Spawn 30 Cavalry"
- glp_save_edit_events.EVTOPTJ5:0 "Spawn 40 Cavalry"
- glp_save_edit_events.EVTOPTK5:0 "Spawn 10 Artillery"
- glp_save_edit_events.EVTOPTL5:0 "Spawn 20 Artillery"
- glp_save_edit_events.EVTOPTM5:0 "Spawn 30 Artillery"
- glp_save_edit_events.EVTOPTN5:0 "Spawn 40 Artillery"
+ glp_save_edit_events.EVTMILITARYZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTMILITARYA01:0 "Spawn to Force Limit"
+ glp_save_edit_events.EVTMILITARYA02:0 "Spawn 10 Infantry"
+ glp_save_edit_events.EVTMILITARYA03:0 "Spawn 20 Infantry"
+ glp_save_edit_events.EVTMILITARYA04:0 "Spawn 30 Infantry"
+ glp_save_edit_events.EVTMILITARYA05:0 "Spawn 40 Infantry"
+ glp_save_edit_events.EVTMILITARYA06:0 "Spawn 10 Cavalry"
+ glp_save_edit_events.EVTMILITARYA07:0 "Spawn 20 Cavalry"
+ glp_save_edit_events.EVTMILITARYA08:0 "Spawn 30 Cavalry"
+ glp_save_edit_events.EVTMILITARYA09:0 "Spawn 40 Cavalry"
+ glp_save_edit_events.EVTMILITARYA10:0 "Spawn 10 Artillery"
+ glp_save_edit_events.EVTMILITARYA11:0 "Spawn 20 Artillery"
+ glp_save_edit_events.EVTMILITARYA12:0 "Spawn 30 Artillery"
+ glp_save_edit_events.EVTMILITARYA13:0 "Spawn 40 Artillery"
  glp_save_edit_events.EVTNAME6:0 "Received Troop Support"
- glp_save_edit_events.EVTDESC6:0 "My [Root.Monarch.GetTitle]! The greatest council of the whole world - The Vampiric Conclave, has granted our [ROOT.GovernmentName] fresh troops in [From.GetName]. This will help us achieve peace sooner!"
+ glp_save_edit_events.EVTDESC6:0 "My [Root.Monarch.GetTitle]! The greatest council of the whole world - Infernal Troll Game Masters, has granted our [ROOT.GovernmentName] fresh troops in [From.GetName]. This will help us achieve peace sooner!"
  glp_save_edit_events.EVTOPTA6:0 "Excellent!"
- glp_new_troops_received_tt:0 "§YReceived fresh troops by the Vampiric Conclave intervention!§!"
+ glp_new_troops_received_tt:0 "§YReceived fresh troops by the Infernal Troll Game Masters intervention!§!"
+ 
  glp_save_edit_events.EVTNAME7:0 "Spawn Ships for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC7:0 "Decide how many and what type of ships to spawn for [From.Owner.GetName] in the province of [From.GetName]."
- glp_save_edit_events.EVTOPTA7:0 "Nevermind"
- glp_save_edit_events.EVTOPTB7:0 "Spawn to Force Limit"
- glp_save_edit_events.EVTOPTC7:0 "Spawn Flagship"
- glp_save_edit_events.EVTOPTD7:0 "Spawn 5 Heavy Ships"
- glp_save_edit_events.EVTOPTE7:0 "Spawn 10 Heavy Ships"
- glp_save_edit_events.EVTOPTF7:0 "Spawn 15 Heavy Ships"
- glp_save_edit_events.EVTOPTG7:0 "Spawn 20 Heavy Ships"
+ glp_save_edit_events.EVTSHIPSZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTSHIPSA01:0 "Spawn to Force Limit"
+ glp_save_edit_events.EVTSHIPSA02:0 "Spawn Flagship"
+ glp_save_edit_events.EVTSHIPSA03:0 "Spawn 5 Heavy Ships"
+ glp_save_edit_events.EVTSHIPSA04:0 "Spawn 10 Heavy Ships"
+ glp_save_edit_events.EVTSHIPSA05:0 "Spawn 15 Heavy Ships"
+ glp_save_edit_events.EVTSHIPSA06:0 "Spawn 20 Heavy Ships"
  glp_save_edit_events.EVTNAME8:0 "Received Ship Support"
- glp_save_edit_events.EVTDESC8:0 "My [Root.Monarch.GetTitle]! The greatest council of the whole world - The Vampiric Conclave, has gifted our [Root.GovernmentName] warships. May they sail to the victory!"
+ glp_save_edit_events.EVTDESC8:0 "My [Root.Monarch.GetTitle]! The greatest council of the whole world - Infernal Troll Game Masters, has gifted our [Root.GovernmentName] warships. May they sail to the victory!"
  glp_save_edit_events.EVTOPTA8:0 "Excellent!"
- glp_new_ships_received_tt:0 "§YReceived freshly build ships by the Vampiric Conclave intervention!§!"
+ glp_new_ships_received_tt:0 "§YReceived freshly build ships by the Infernal Troll Game Masters intervention!§!"
+ 
  glp_save_edit_events.EVTNAME9:0 "Change Ruler for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC9:0 "Decide what to do with rulers of [From.Owner.GetName]."
- glp_save_edit_events.EVTOPTA9:0 "Nevermind"
- glp_save_edit_events.EVTOPTB9:0 "Assassinate Ruler"
- glp_save_edit_events.EVTOPTC9:0 "Assassinate Heir"
- glp_save_edit_events.EVTOPTD9:0 "General Tuition"
- glp_save_edit_events.EVTOPTE9:0 "Administrative Tuition"
- glp_save_edit_events.EVTOPTF9:0 "Diplomatic Tuition"
- glp_save_edit_events.EVTOPTG9:0 "Military Tuition"
- glp_save_edit_events.EVTOPTH9:0 "Grzegorz Brzeczyszczykiewicz Ruler"
- glp_save_edit_events.EVTOPTI9:0 "Jan Pawel II"
- glp_save_edit_events.EVTOPTJ9:0 "Arthur Pendragon"
+ glp_save_edit_events.EVTLEADERZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTLEADERA01:0 "Assassinate Ruler"
+ glp_save_edit_events.EVTLEADERA02:0 "Assassinate Heir"
+ glp_save_edit_events.EVTLEADERA03:0 "General Tuition +1/+1/+1"
+ glp_save_edit_events.EVTLEADERA04:0 "Administrative Tuition +1/+0/+0"
+ glp_save_edit_events.EVTLEADERA05:0 "Diplomatic Tuition +0/+1/+0"
+ glp_save_edit_events.EVTLEADERA06:0 "Military Tuition +0/+0/+1"
+ glp_save_edit_events.EVTLEADERA07:0 "Get Stupidier -1/-1/-1"
+# glp_save_edit_events.EVTOPTH9:0 "Grzegorz Brzeczyszczykiewicz Ruler"
+# glp_save_edit_events.EVTOPTI9:0 "Jan Pawel II"
+# glp_save_edit_events.EVTOPTJ9:0 "Arthur Pendragon"
  glp_save_edit_events.EVTNAME10:0 "Ruler Tuition for [Root.Monarch.GetName]"
- glp_save_edit_events.EVTDESC10:0 "My [Root.Monarch.GetTitle]! Our [Root.Monarch.GetRulerTitleAndNameOrRegency], [Root.Monarch.GetName] has received tuition from no other than the very best - Elizabeth Báthory! He is now wiser then he ever was before!"
+ glp_save_edit_events.EVTDESC10:0 "My [Root.Monarch.GetTitle]! Our [Root.Monarch.GetRulerTitleAndNameOrRegency], [Root.Monarch.GetName] has received tuition from no other than the very best - Skygroot Mendel! He is now wiser then he ever was before!"
  glp_save_edit_events.EVTOPTA10:0 "Maginificent!"
+ glp_save_edit_events.EVTNAME105:0 "Ruler Tuition for [Root.Monarch.GetName]"
+ glp_save_edit_events.EVTDESC105:0 "My [Root.Monarch.GetTitle]! Our [Root.Monarch.GetRulerTitleAndNameOrRegency], [Root.Monarch.GetName] has received tuition from no other than the very best - Skygroot Mendel! But he was away in his tuition. He's now dumber!"
+ glp_save_edit_events.EVTOPTA105:0 "Damn it!"
  glp_ruler_tuition_tt:0 "§Y[Root.GetName]'s ruler, [Root.Monarch.GetName] has received Tuition from no other than the very best - Elizabeth Báthory!§!"
  glp_save_edit_events.EVTNAME11:0 "Ruler Assassinated!"
  glp_save_edit_events.EVTDESC11:0 "My [Root.Monarch.GetTitle]! By some kind of a devilish plot, our [Root.Monarch.GetRulerTitleAndNameOrRegency] was assassinated! Could the Vlad Draculea be behind it? Our enemies must be powerful indeed!"
  glp_save_edit_events.EVTOPTA11:0 "Disgraceful!"
- glp_ruler_assasinated_tt:0 "§Y[Root.GetName]'s ruler has been assassinated by the intervention of the Vlad Draculea!§!"
- glp_heir_assasinated_tt:0 "§Y[Root.GetName]'s  heir has been assassinated by the intervention of the Vlad Draculea!§!"
- glp_save_edit_events.EVTNAME12:0 "Heavenly Ruler"
- glp_save_edit_events.EVTDESC12:0 "My [Root.Monarch.GetTitle]! The Vampiric Conclave has crowned [Root.Monarch.GetName] as our ruler. The future of our nation looks bright under this new leadership!"
- glp_save_edit_events.EVTOPTA12:0 "Oh my."
- glp_new_ruler_tt:0 "§YNew Ruler ascends the throne by the intervention of the Vampiric Conclave!§!"
+ glp_ruler_assasinated_tt:0 "§Y[Root.GetName]'s ruler has been assassinated by the intervention of Skygroot Mendel!§!"
+ glp_heir_assasinated_tt:0 "§Y[Root.GetName]'s  heir has been assassinated by the intervention of Skygroot Mendel!§!"
+# glp_save_edit_events.EVTNAME12:0 "Heavenly Ruler"
+# glp_save_edit_events.EVTDESC12:0 "My [Root.Monarch.GetTitle]! The Vampiric Conclave has crowned [Root.Monarch.GetName] as our ruler. The future of our nation looks bright under this new leadership!"
+# glp_save_edit_events.EVTOPTA12:0 "Oh my."
+# glp_new_ruler_tt:0 "§YNew Ruler ascends the throne by the intervention of the Vampiric Conclave!§!"
+ 
  glp_save_edit_events.EVTNAME13:0 "Grant Monarch Power to [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC13:0 "Decide how much Monarch Power to grant to [From.Owner.GetName]."
- glp_save_edit_events.EVTOPTA13:0 "Nevermind"
- glp_save_edit_events.EVTOPTB13:0 "50/50/50 Monarch Power"
- glp_save_edit_events.EVTOPTC13:0 "100/100/100 Monarch Power"
- glp_save_edit_events.EVTOPTD13:0 "150/150/150 Monarch Power"
- glp_save_edit_events.EVTOPTE13:0 "100 Admin Monarch Power"
- glp_save_edit_events.EVTOPTF13:0 "100 Diplomatic Monarch Power"
- glp_save_edit_events.EVTOPTG13:0 "100 Military Monarch Power"
- glp_save_edit_events.EVTOPTH13:0 "999/999/999 Monarch Power(new nation)"
- glp_save_edit_events.EVTOPTI13:0 "-50/-50/-50 Monarch Power"
- glp_save_edit_events.EVTOPTJ13:0 "50 Admin Monarch Power"
- glp_save_edit_events.EVTOPTK13:0 "50 Diplomatic Monarch Power"
- glp_save_edit_events.EVTOPTL13:0 "50 Military Monarch Power"
- glp_save_edit_events.EVTOPTM13:0 "25 Admin Monarch Power"
- glp_save_edit_events.EVTOPTN13:0 "25 Diplomatic Monarch Power"
- glp_save_edit_events.EVTOPTO13:0 "25 Military Monarch Power"
- glp_save_edit_events.EVTOPTP13:0 "300 Admin Monarch Power"
- glp_save_edit_events.EVTOPTQ13:0 "999 Admin Monarch Power"
- glp_save_edit_events.EVTOPTR13:0 "300 Diplomatic Monarch Power"
- glp_save_edit_events.EVTOPTS13:0 "999 Diplomatic Monarch Power"
- glp_save_edit_events.EVTOPTT13:0 "300 Military Monarch Power"
- glp_save_edit_events.EVTOPTU13:0 "999 Military Monarch Power"
+ glp_save_edit_events.EVTEVTMANAZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTMANAA01:0 "50/50/50 Monarch Power"
+ glp_save_edit_events.EVTMANAA02:0 "100/100/100 Monarch Power"
+ glp_save_edit_events.EVTMANAA03:0 "150/150/150 Monarch Power"
+ glp_save_edit_events.EVTMANAA04:0 "999/999/999 Monarch Power(new nation)"
+ glp_save_edit_events.EVTMANAA05:0 "-50/-50/-50 Monarch Power"
+ glp_save_edit_events.EVTMANAA06:0 "25 Admin Monarch Power"
+ glp_save_edit_events.EVTMANAA07:0 "25 Diplomatic Monarch Power"
+ glp_save_edit_events.EVTMANAA08:0 "25 Military Monarch Power"
+ glp_save_edit_events.EVTMANAA09:0 "50 Admin Monarch Power"
+ glp_save_edit_events.EVTMANAA10:0 "50 Diplomatic Monarch Power"
+ glp_save_edit_events.EVTMANAA11:0 "50 Military Monarch Power"
+ glp_save_edit_events.EVTMANAA12:0 "100 Admin Monarch Power"
+ glp_save_edit_events.EVTMANAA13:0 "100 Diplomatic Monarch Power"
+ glp_save_edit_events.EVTMANAA14:0 "100 Military Monarch Power"
+ glp_save_edit_events.EVTMANAA15:0 "300 Admin Monarch Power"
+ glp_save_edit_events.EVTMANAA16:0 "300 Diplomatic Monarch Power"
+ glp_save_edit_events.EVTMANAA17:0 "300 Military Monarch Power"
+ glp_save_edit_events.EVTMANAA18:0 "999 Admin Monarch Power"
+ glp_save_edit_events.EVTMANAA19:0 "999 Diplomatic Monarch Power"
+ glp_save_edit_events.EVTMANAA20:0 "999 Military Monarch Power"
+ glp_save_edit_events.EVTMANAA21:0 "-100 Admin Monarch Power"
+ glp_save_edit_events.EVTMANAA22:0 "-100 Diplomatic Monarch Power"
+ glp_save_edit_events.EVTMANAA23:0 "-100 Military Monarch Power"
+ 
  glp_save_edit_events.EVTNAME14:0 "Grant Military Boost to [From.GetName]"
  glp_save_edit_events.EVTDESC14:0 "Decide what and how much military rewards to grant to [From.Owner.GetName]."
  glp_save_edit_events.EVTOPTA14:0 "Nevermind"
@@ -508,7 +521,6 @@ l_english:
  glp_save_edit_events.EVTOPTH71:0 "Build/Upgrade Manpower Building"
  glp_save_edit_events.EVTOPTI71:0 "Build/Upgrade FL Building"
  glp_save_edit_events.EVTOPTJ71:0 "Nevermind"
-
 
  #########ADMIN tag and ideas############
 
