Push avancée Tool Mj
EVTNAME14 => Need test changement military Elven

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -68,6 +68,7 @@
  glp_save_edit_events.EVTMILITARYA11:0 "Spawn 20 Artillery"
  glp_save_edit_events.EVTMILITARYA12:0 "Spawn 30 Artillery"
  glp_save_edit_events.EVTMILITARYA13:0 "Spawn 40 Artillery"
+ glp_save_edit_events.EVTMILITARYA14:0 "Spawn 5 Artificer Regiment"
  glp_save_edit_events.EVTNAME6:0 "Received Troop Support"
  glp_save_edit_events.EVTDESC6:0 "My [Root.Monarch.GetTitle]! The greatest council of the whole world - Infernal Troll Game Masters, has granted our [ROOT.GovernmentName] fresh troops in [From.GetName]. This will help us achieve peace sooner!"
  glp_save_edit_events.EVTOPTA6:0 "Excellent!"
@@ -146,17 +147,43 @@
  
  glp_save_edit_events.EVTNAME14:0 "Grant Military Boost to [From.GetName]"
  glp_save_edit_events.EVTDESC14:0 "Decide what and how much military rewards to grant to [From.Owner.GetName]."
- glp_save_edit_events.EVTOPTA14:0 "Nevermind"
- glp_save_edit_events.EVTOPTB14:0 "25 Army Tradition"
- glp_save_edit_events.EVTOPTC14:0 "50 Army Tradition"
- glp_save_edit_events.EVTOPTD14:0 "5 Army Professionalism"
- glp_save_edit_events.EVTOPTE14:0 "10 Army Professionalism"
- glp_save_edit_events.EVTOPTF14:0 "15 Army Professionalism"
- glp_save_edit_events.EVTOPTG14:0 "15k Manpower"
- glp_save_edit_events.EVTOPTH14:0 "25k Manpower"
- glp_save_edit_events.EVTOPTI14:0 "50k Manpower"
- glp_save_edit_events.EVTOPTJ14:0 "100k Manpower"
- glp_save_edit_events.EVTOPTK14:0 "1 year of Manpower"
+ glp_save_edit_events.EVTMILITARYZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTMILITARYA01:0 "25 Army Tradition"
+ glp_save_edit_events.EVTMILITARYA02:0 "50 Army Tradition"
+ glp_save_edit_events.EVTMILITARYA03:0 "-10 Army Tradition" 
+ glp_save_edit_events.EVTMILITARYA04:0 "5 Army Professionalism"
+ glp_save_edit_events.EVTMILITARYA05:0 "10 Army Professionalism"
+ glp_save_edit_events.EVTMILITARYA06:0 "15 Army Professionalism"
+ glp_save_edit_events.EVTMILITARYA07:0 "-5 Army Professionalism"
+ glp_save_edit_events.EVTMILITARYA08:0 "15k Manpower"
+ glp_save_edit_events.EVTMILITARYA09:0 "25k Manpower"
+ glp_save_edit_events.EVTMILITARYA10:0 "50k Manpower"
+ glp_save_edit_events.EVTMILITARYA11:0 "100k Manpower"
+ glp_save_edit_events.EVTMILITARYA12:0 "-10k Manpower"
+ glp_save_edit_events.EVTMILITARYA13:0 "1 year of Manpower"
+ glp_save_edit_events.EVTMILITARYA14:0 "Change military to Elven"
+ glp_save_edit_events.EVTMILITARYA15:0 "Change military to Dwarven"
+ glp_save_edit_events.EVTMILITARYA16:0 "Change military to Gnoll"
+ glp_save_edit_events.EVTMILITARYA17:0 "Change military to Gnome"
+ glp_save_edit_events.EVTMILITARYA18:0 "Change military to Goblin"
+ glp_save_edit_events.EVTMILITARYA19:0 "Change military to Half-elven"
+ glp_save_edit_events.EVTMILITARYA20:0 "Change military to Half_orc"
+ glp_save_edit_events.EVTMILITARYA21:0 "Change military to Halfling"
+ glp_save_edit_events.EVTMILITARYA22:0 "Change military to Harpy"
+ glp_save_edit_events.EVTMILITARYA23:0 "Change military to Human"
+ glp_save_edit_events.EVTMILITARYA24:0 "Change military to Kobold"
+ glp_save_edit_events.EVTMILITARYA25:0 "Change military to Orc"
+ glp_save_edit_events.EVTMILITARYA26:0 "Change military to Ruinborn"
+ glp_save_edit_events.EVTMILITARYA27:0 "Change military to Troll"
+ glp_save_edit_events.EVTMILITARYA28:0 "Change military to Ogre"
+ glp_save_edit_events.EVTMILITARYA29:0 "Change military to Centaur"
+ glp_save_edit_events.EVTMILITARYA30:0 "Change military to Hobgoblin"
+ glp_save_edit_events.EVTMILITARYA31:0 "Change military to Harimari"
+ glp_save_edit_events.EVTMILITARYA32:0 "Change military to Lizardfolk"
+ glp_save_edit_events.EVTMILITARYA33:0 "Change military to Mechanim"
+ glp_save_edit_events.EVTMILITARYA34:0 "Change military to Undead"
+ glp_save_edit_events.EVTMILITARYA35:0 "Change military to Spirit"
+ 
  glp_save_edit_events.EVTNAME15:0 "Grant Navy Boost to [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC15:0 "Decide what and how much naval rewards to grant to [From.Owner.GetName]."
  glp_save_edit_events.EVTOPTA15:0 "Nevermind"
