Test à faire Spawn War wizard

--- a/3362815204/localisation/GLP_l_english.yml
+++ b/3362815204/localisation/GLP_l_english.yml
@@ -107,9 +107,9 @@
  glp_save_edit_events.EVTNAME105:0 "Ruler Tuition for [Root.Monarch.GetName]"
  glp_save_edit_events.EVTDESC105:0 "My [Root.Monarch.GetTitle]! Our [Root.Monarch.GetRulerTitleAndNameOrRegency], [Root.Monarch.GetName] has received tuition from no other than the very best - Skygroot Mendel! But he was away in his tuition. He's now dumber!"
  glp_save_edit_events.EVTOPTA105:0 "Damn it!"
- glp_ruler_tuition_tt:0 "§Y[Root.GetName]'s ruler, [Root.Monarch.GetName] has received Tuition from no other than the very best - Elizabeth Báthory!§!"
+ glp_ruler_tuition_tt:0 "§Y[Root.GetName]'s ruler, [Root.Monarch.GetName] has received Tuition from no other than the very best - Skygroot Mendel!§!"
  glp_save_edit_events.EVTNAME11:0 "Ruler Assassinated!"
- glp_save_edit_events.EVTDESC11:0 "My [Root.Monarch.GetTitle]! By some kind of a devilish plot, our [Root.Monarch.GetRulerTitleAndNameOrRegency] was assassinated! Could the Vlad Draculea be behind it? Our enemies must be powerful indeed!"
+ glp_save_edit_events.EVTDESC11:0 "My [Root.Monarch.GetTitle]! By some kind of a devilish plot, our [Root.Monarch.GetRulerTitleAndNameOrRegency] was assassinated! Could Skygroot Mendel be behind it? Our enemies must be powerful indeed!"
  glp_save_edit_events.EVTOPTA11:0 "Disgraceful!"
  glp_ruler_assasinated_tt:0 "§Y[Root.GetName]'s ruler has been assassinated by the intervention of Skygroot Mendel!§!"
  glp_heir_assasinated_tt:0 "§Y[Root.GetName]'s  heir has been assassinated by the intervention of Skygroot Mendel!§!"
@@ -147,90 +147,103 @@
  
  glp_save_edit_events.EVTNAME14:0 "Grant Military Boost to [From.GetName]"
  glp_save_edit_events.EVTDESC14:0 "Decide what and how much military rewards to grant to [From.Owner.GetName]."
- glp_save_edit_events.EVTMILITARYZZ1:0 "Nevermind"
- glp_save_edit_events.EVTMILITARYA01:0 "25 Army Tradition"
- glp_save_edit_events.EVTMILITARYA02:0 "50 Army Tradition"
- glp_save_edit_events.EVTMILITARYA03:0 "-10 Army Tradition" 
- glp_save_edit_events.EVTMILITARYA04:0 "5 Army Professionalism"
- glp_save_edit_events.EVTMILITARYA05:0 "10 Army Professionalism"
- glp_save_edit_events.EVTMILITARYA06:0 "15 Army Professionalism"
- glp_save_edit_events.EVTMILITARYA07:0 "-5 Army Professionalism"
- glp_save_edit_events.EVTMILITARYA08:0 "15k Manpower"
- glp_save_edit_events.EVTMILITARYA09:0 "25k Manpower"
- glp_save_edit_events.EVTMILITARYA10:0 "50k Manpower"
- glp_save_edit_events.EVTMILITARYA11:0 "100k Manpower"
- glp_save_edit_events.EVTMILITARYA12:0 "-10k Manpower"
- glp_save_edit_events.EVTMILITARYA13:0 "1 year of Manpower"
- glp_save_edit_events.EVTMILITARYA14:0 "Change military to Elven"
- glp_save_edit_events.EVTMILITARYA15:0 "Change military to Dwarven"
- glp_save_edit_events.EVTMILITARYA16:0 "Change military to Gnoll"
- glp_save_edit_events.EVTMILITARYA17:0 "Change military to Gnome"
- glp_save_edit_events.EVTMILITARYA18:0 "Change military to Goblin"
- glp_save_edit_events.EVTMILITARYA19:0 "Change military to Half-elven"
- glp_save_edit_events.EVTMILITARYA20:0 "Change military to Half_orc"
- glp_save_edit_events.EVTMILITARYA21:0 "Change military to Halfling"
- glp_save_edit_events.EVTMILITARYA22:0 "Change military to Harpy"
- glp_save_edit_events.EVTMILITARYA23:0 "Change military to Human"
- glp_save_edit_events.EVTMILITARYA24:0 "Change military to Kobold"
- glp_save_edit_events.EVTMILITARYA25:0 "Change military to Orc"
- glp_save_edit_events.EVTMILITARYA26:0 "Change military to Ruinborn"
- glp_save_edit_events.EVTMILITARYA27:0 "Change military to Troll"
- glp_save_edit_events.EVTMILITARYA28:0 "Change military to Ogre"
- glp_save_edit_events.EVTMILITARYA29:0 "Change military to Centaur"
- glp_save_edit_events.EVTMILITARYA30:0 "Change military to Hobgoblin"
- glp_save_edit_events.EVTMILITARYA31:0 "Change military to Harimari"
- glp_save_edit_events.EVTMILITARYA32:0 "Change military to Lizardfolk"
- glp_save_edit_events.EVTMILITARYA33:0 "Change military to Mechanim"
- glp_save_edit_events.EVTMILITARYA34:0 "Change military to Undead"
- glp_save_edit_events.EVTMILITARYA35:0 "Change military to Spirit"
+ glp_save_edit_events.EVTMILITARYREWARDZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTMILITARYREWARDA01:0 "25 Army Tradition"
+ glp_save_edit_events.EVTMILITARYREWARDA02:0 "50 Army Tradition"
+ glp_save_edit_events.EVTMILITARYREWARDA03:0 "-10 Army Tradition" 
+ glp_save_edit_events.EVTMILITARYREWARDA04:0 "5 Army Professionalism"
+ glp_save_edit_events.EVTMILITARYREWARDA05:0 "10 Army Professionalism"
+ glp_save_edit_events.EVTMILITARYREWARDA06:0 "15 Army Professionalism"
+ glp_save_edit_events.EVTMILITARYREWARDA07:0 "-5 Army Professionalism"
+ glp_save_edit_events.EVTMILITARYREWARDA08:0 "15k Manpower"
+ glp_save_edit_events.EVTMILITARYREWARDA09:0 "25k Manpower"
+ glp_save_edit_events.EVTMILITARYREWARDA10:0 "50k Manpower"
+ glp_save_edit_events.EVTMILITARYREWARDA11:0 "100k Manpower"
+ glp_save_edit_events.EVTMILITARYREWARDA12:0 "-10k Manpower"
+ glp_save_edit_events.EVTMILITARYREWARDA13:0 "1 year of Manpower"
+ glp_save_edit_events.EVTMILITARYREWARDA14:0 "Change military to Elven"
+ glp_save_edit_events.EVTMILITARYREWARDA15:0 "Change military to Dwarven"
+ glp_save_edit_events.EVTMILITARYREWARDA16:0 "Change military to Gnoll"
+ glp_save_edit_events.EVTMILITARYREWARDA17:0 "Change military to Gnome"
+ glp_save_edit_events.EVTMILITARYREWARDA18:0 "Change military to Goblin"
+ glp_save_edit_events.EVTMILITARYREWARDA19:0 "Change military to Half-elven"
+ glp_save_edit_events.EVTMILITARYREWARDA20:0 "Change military to Half_orc"
+ glp_save_edit_events.EVTMILITARYREWARDA21:0 "Change military to Halfling"
+ glp_save_edit_events.EVTMILITARYREWARDA22:0 "Change military to Harpy"
+ glp_save_edit_events.EVTMILITARYREWARDA23:0 "Change military to Human"
+ glp_save_edit_events.EVTMILITARYREWARDA24:0 "Change military to Kobold"
+ glp_save_edit_events.EVTMILITARYREWARDA25:0 "Change military to Orc"
+ glp_save_edit_events.EVTMILITARYREWARDA26:0 "Change military to Ruinborn"
+ glp_save_edit_events.EVTMILITARYREWARDA27:0 "Change military to Troll"
+ glp_save_edit_events.EVTMILITARYREWARDA28:0 "Change military to Ogre"
+ glp_save_edit_events.EVTMILITARYREWARDA29:0 "Change military to Centaur"
+ glp_save_edit_events.EVTMILITARYREWARDA30:0 "Change military to Hobgoblin"
+ glp_save_edit_events.EVTMILITARYREWARDA31:0 "Change military to Harimari"
+ glp_save_edit_events.EVTMILITARYREWARDA32:0 "Change military to Lizardfolk"
+ glp_save_edit_events.EVTMILITARYREWARDA33:0 "Change military to Mechanim"
+ glp_save_edit_events.EVTMILITARYREWARDA34:0 "Change military to Undead"
+ glp_save_edit_events.EVTMILITARYREWARDA35:0 "Change military to Spirit"
  
  glp_save_edit_events.EVTNAME15:0 "Grant Navy Boost to [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC15:0 "Decide what and how much naval rewards to grant to [From.Owner.GetName]."
- glp_save_edit_events.EVTOPTA15:0 "Nevermind"
- glp_save_edit_events.EVTOPTB15:0 "25 Navy Tradition"
- glp_save_edit_events.EVTOPTC15:0 "50 Navy Tradition"
- glp_save_edit_events.EVTOPTD15:0 "2.5k Sailors"
- glp_save_edit_events.EVTOPTE15:0 "5k Sailors"
- glp_save_edit_events.EVTOPTF15:0 "10k Sailors"
- glp_save_edit_events.EVTOPTG15:0 "15k Sailors"
- glp_save_edit_events.EVTOPTH15:0 "20k Sailors"
- glp_save_edit_events.EVTOPTI15:0 "25k Sailors"
- glp_save_edit_events.EVTOPTJ15:0 "50k Sailors"
+ glp_save_edit_events.EVTNAVYZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTNAVYA01:0 "25 Navy Tradition"
+ glp_save_edit_events.EVTNAVYA02:0 "50 Navy Tradition"
+ glp_save_edit_events.EVTNAVYA03:0 "-10 Navy Tradition"
+ glp_save_edit_events.EVTNAVYA04:0 "2.5k Sailors"
+ glp_save_edit_events.EVTNAVYA05:0 "5k Sailors"
+ glp_save_edit_events.EVTNAVYA06:0 "10k Sailors"
+ glp_save_edit_events.EVTNAVYA07:0 "1 year of Sailors"
+ glp_save_edit_events.EVTNAVYA08:0 "-2.5k Sailors"
+ 
  glp_save_edit_events.EVTNAME16:0 "Give General Boost for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC16:0 "Decide what and how much general rewards to give for [From.Owner.GetName]."
- glp_save_edit_events.EVTOPTA16:0 "Nevermind"
- glp_save_edit_events.EVTOPTB16:0 "25 Prestige"
- glp_save_edit_events.EVTOPTC16:0 "50 Prestige"
- glp_save_edit_events.EVTOPTD16:0 "1 Stability"
- glp_save_edit_events.EVTOPTE16:0 "2 Stability"
- glp_save_edit_events.EVTOPTF16:0 "3 Stability"
- glp_save_edit_events.EVTOPTG16:0 "5 Innovativeness"
- glp_save_edit_events.EVTOPTH16:0 "10 Innovativeness"
- glp_save_edit_events.EVTOPTI16:0 "50 Government Progress"
- glp_save_edit_events.EVTOPTJ16:0 "100 Government Progress"
- glp_save_edit_events.EVTOPTK16:0 "150 Government Progress"
- glp_save_edit_events.EVTOPTL16:0 "200 Government Progress"
- glp_save_edit_events.EVTOPTM16:0 "15 Legitimacy or Other"
- glp_save_edit_events.EVTOPTN16:0 "25 Legitimacy or Other"
- glp_save_edit_events.EVTOPTO16:0 "50 Legitimacy or Other"
- glp_save_edit_events.EVTOPTP16:0 "-1 Stability"
- glp_save_edit_events.EVTOPTQ16:0 "-25 Prestige"
- glp_save_edit_events.EVTOPTR16:0 "10 Authority"
- glp_save_edit_events.EVTOPTS16:0 "100 Splendor"
+ glp_save_edit_events.EVTBUFFZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTBUFFA01:0 "25 Prestige"
+ glp_save_edit_events.EVTBUFFA02:0 "200 Prestige"
+ glp_save_edit_events.EVTBUFFA03:0 "-25 Prestige"
+ glp_save_edit_events.EVTBUFFA04:0 "-200 Prestige"
+ glp_save_edit_events.EVTBUFFA05:0 "1 Stability"
+ glp_save_edit_events.EVTBUFFA06:0 "6 Stability"
+ glp_save_edit_events.EVTBUFFA07:0 "-1 Stability"
+ glp_save_edit_events.EVTBUFFA08:0 "-6 Stability"
+ glp_save_edit_events.EVTBUFFA09:0 "10 Innovativeness"
+ glp_save_edit_events.EVTBUFFA10:0 "100 Innovativeness"
+ glp_save_edit_events.EVTBUFFA11:0 "-10 Innovativeness"
+ glp_save_edit_events.EVTBUFFA12:0 "-100 Innovativeness"
+ glp_save_edit_events.EVTBUFFA13:0 "25 Government Progress"
+ glp_save_edit_events.EVTBUFFA14:0 "50 Government Progress"
+ glp_save_edit_events.EVTBUFFA15:0 "100 Government Progress"
+ glp_save_edit_events.EVTBUFFA16:0 "200 Government Progress"
+ glp_save_edit_events.EVTBUFFA17:0 "-100 Government Progress"
+ glp_save_edit_events.EVTBUFFA18:0 "15 Legitimacy or Other"
+ glp_save_edit_events.EVTBUFFA19:0 "25 Legitimacy or Other"
+ glp_save_edit_events.EVTBUFFA20:0 "100 Legitimacy or Other"
+ glp_save_edit_events.EVTBUFFA21:0 "-15 Legitimacy or Other"
+ glp_save_edit_events.EVTBUFFA22:0 "-100 Legitimacy or Other"
+ glp_save_edit_events.EVTBUFFA23:0 "10 Authority"
+ glp_save_edit_events.EVTBUFFA24:0 "100 Authority"
+ glp_save_edit_events.EVTBUFFA25:0 "-100 Authority"
+ glp_save_edit_events.EVTBUFFA26:0 "100 Splendor"
+ glp_save_edit_events.EVTBUFFA27:0 "800 Splendor"
+ glp_save_edit_events.EVTBUFFA28:0 "-100 Splendor"
+ 
  glp_save_edit_events.EVTNAME17:0 "Spawn Generals for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC17:0 "Decide what kind of generals to spawn for [From.Owner.GetName]."
- glp_save_edit_events.EVTOPTA17:0 "Nevermind"
- glp_save_edit_events.EVTOPTB17:0 "50 AT General"
- glp_save_edit_events.EVTOPTC17:0 "100 AT General"
- glp_save_edit_events.EVTOPTD17:0 "50 AT Conquistador"
- glp_save_edit_events.EVTOPTE17:0 "100 AT Conquistador"
- glp_save_edit_events.EVTOPTF17:0 "Aleksji Dynamitov"
- glp_save_edit_events.EVTOPTG17:0 "Lancelot of the Lake"
- glp_save_edit_events.EVTOPTH17:0 "Sir Tristan and Isolde"
+ glp_save_edit_events.EVTGENERALZZ1:0 "Nevermind"
+ glp_save_edit_events.EVTGENERALA01:0 "50 AT General"
+ glp_save_edit_events.EVTGENERALA02:0 "100 AT General"
+ glp_save_edit_events.EVTGENERALA03:0 "50 AT Conquistador"
+ glp_save_edit_events.EVTGENERALA04:0 "100 AT Conquistador"
+ glp_save_edit_events.EVTGENERALA05:0 "Spawn War Wizard"
+#glp_save_edit_events.EVTOPTF17:0 "Aleksji Dynamitov"
+#glp_save_edit_events.EVTOPTG17:0 "Lancelot of the Lake"
+#glp_save_edit_events.EVTOPTH17:0 "Sir Tristan and Isolde"
  glp_save_edit_events.EVTNAME18:0 "Received New General"
- glp_save_edit_events.EVTDESC18:0 "My [Root.Monarch.GetTitle]! The greatest council of the whole world - The Vampiric Conclave, sent one of his great generals to our [Root.GovernmentName]! He will lead our troops to the great victories!"
+ glp_save_edit_events.EVTDESC18:0 "My [Root.Monarch.GetTitle]! The greatest council of the whole world - Infernal Troll Game Masters, sent one of his great generals to our [Root.GovernmentName]! He will lead our troops to the great victories!"
  glp_save_edit_events.EVTOPTA18:0 "Let our enemies tremble in fear!"
  glp_new_general_tt:0 "§YReceived new generals From the Overlord!§!"
+ 
  glp_save_edit_events.EVTNAME19:0 "Spawn Admirals for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC19:0 "Decide what kind of Admirals to spawn for [From.Owner.GetName]."
  glp_save_edit_events.EVTOPTA19:0 "Nevermind"
@@ -242,6 +255,7 @@
  glp_save_edit_events.EVTNAME20:0 "A New Admiral Arrived!"
  glp_save_edit_events.EVTDESC20:0 "My [Root.Monarch.GetTitle]! The greatest council of the whole world - The Vampiric Conclave, sent one of his great admirals to our [Root.GovernmentName]! He will lead our armadas to the great victories!"
  glp_save_edit_events.EVTOPTA20:0 "Give this man a Boat."
+ 
  glp_new_admiral_tt:0 "§YReceived new Advisors From the Conclave!§!"
  glp_save_edit_events.EVTNAME21:0 "Spawn Advisors for [From.Owner.GetName]"
  glp_save_edit_events.EVTDESC21:0 "Decide what kind of Advisors to spawn for [From.Owner.GetName]."
